🔒 完整安全修复包
- 创建SECURITY_ALERT.md安全警告文档
- 实现安全凭据管理模块 (src/auth/credentials.py)
- 更新.gitignore防止敏感信息泄露
- 添加环境变量支持和交互式输入
- 更新README添加安全警告和最佳实践
- 移除所有硬编码的敏感信息

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
-# Project specific
+# Project specific - 敏感信息
 cookies.json
 *.log
 logs/
@@ -60,6 +60,26 @@ data/*.html
 
 # Configuration (keep template, ignore actual config)
 config/config.json
+
+# 敏感信息和凭据
+**/credentials.json
+**/secrets.json
+**/*password*
+**/*secret*
+**/*key*
+**/.*env*
+.env
+.env.local
+.env.*.local
+
+# 验证码图片
+CSMU_code*.png
+*_code*.png
+
+# 个人信息文件
+name.json
+user_info.json
+personal_data.json
 
 # Temporary files
 *.tmp
