添加 .env 环境变量支持
- 创建 .env.example 模板文件
- 实现环境变量加载模块 (src/utils/env_loader.py)
- 更新 .gitignore 确保 .env 文件不被提交
- 集成 .env 支持到凭据管理系统
- 创建详细的环境变量配置指南 (ENV_SETUP.md)
- 支持数据库、Redis、应用等完整配置

--- a/.gitignore
+++ b/.gitignore
@@ -67,10 +67,16 @@ config/config.json
 **/*password*
 **/*secret*
 **/*key*
-**/.*env*
+
+# 环境变量文件 (保留模板文件)
 .env
 .env.local
 .env.*.local
+.env.development
+.env.production
+.env.test
+**/.*env*
+!.env.example
 
 # 验证码图片
 CSMU_code*.png
